@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-08T01:17:48Z",
-  "count_outdated" : 594,
-  "uniques_outdated" : 281,
-  "count" : 630,
-  "uniques" : 296,
+  "timestamp" : "2023-11-08T16:23:40Z",
+  "count_outdated" : 597,
+  "uniques_outdated" : 282,
+  "count" : 631,
+  "uniques" : 297,
   "clones" : [
-    {
-      "timestamp": "2023-10-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-26T00:00:00Z",
       "count": 3,
@@ -127,6 +118,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
