@@ -1,12 +1,7 @@
 {
-  "count": 35,
+  "count": 34,
   "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2023-10-25T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-26T00:00:00Z",
       "count": 3,
@@ -70,6 +65,11 @@
     {
       "timestamp": "2023-11-07T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-08T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
