@@ -1,3 +1,12 @@
+2023-11-08T16:23:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6801085131 # 939
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-08
+* notice: last 14d: unq all: 2 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 281 594 / 296 630
+* notice: next accum: outdated-unq outdated-all / unq all: 282 597 / 297 631
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-10-25] / [2023-11-08]
+
 2023-11-08T01:17:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6792448399 # 937
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-08
